--- a/src/app.css
+++ b/src/app.css
@@ -54,4 +54,21 @@ body {
     --color-muted: 68, 77, 85;
     --color-on-muted: var(--color-fg);
   }
+
+
+  h1 {
+    @apply text-5xl font-extrabold;
+  }
+
+  h2 {
+    @apply text-4xl font-bold;
+  }
+
+  h3 {
+    @apply text-3xl font-bold;
+  }
+
+  h4 {
+    @apply text-2xl font-bold;
+  }
 }
